--- a/djangonautic/assets/styles.css
+++ b/djangonautic/assets/styles.css
@@ -1,6 +1,7 @@
 body {
-  background-color: #0f121f;
-  background-image: url(stars.png);
+  background-color: #000000;
+  /* background-image: url(stars.png); */
+  background-image: url(moon.jpg);
   background-repeat: no-repeat;
   color: #fff;
 }
