--- a/djangonautic/templates/about.html
+++ b/djangonautic/templates/about.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
+{% extends 'base_layout.html' %}
+{% block content %}
   <h1>About us</h1>
   <p>We like Django.</p>
-</body>
-</html>
+  {% endblock %}
