--- a/djangonautic/articles/templates/articles/article_detail.html
+++ b/djangonautic/articles/templates/articles/article_detail.html
@@ -3,6 +3,7 @@
   <h1>Article List</h1>
   <div class="article-detail">
       <div class="article">
+        <img src="{{ article.thumb.url }}" alt="">
         <h2>{{ article.title }}</a></h2>
         <p>{{ article.body }}</p>
         <p>{{ article.date }}</p>
