user creation form

--- a/djangonautic/accounts/templates/accounts/signup.html
+++ b/djangonautic/accounts/templates/accounts/signup.html
@@ -2,6 +2,9 @@
 {% block content %}
   <h1>Sign Up</h1>
   <div class="signup">
-
+    <form action="" class="site-form" action="index.html" method="post">
+      {{ form }}
+      <input type="submit" value="Signup">
+    </form>
   </div>
 {% endblock %}
