--- a/djangonautic/templates/base_layout.html
+++ b/djangonautic/templates/base_layout.html
@@ -6,7 +6,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Articles</title>
+  <title>Djangonautic</title>
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
   <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
@@ -16,4 +17,7 @@
     {% endblock %}
   </div>
 </body>
+<!-- <footer>
+  Harika Duyu made by 🤍
+</footer> -->
 </html>
