--- a/djangonautic/accounts/templates/accounts/signup.html
+++ b/djangonautic/accounts/templates/accounts/signup.html
@@ -1,10 +1,10 @@
 {% extends 'base_layout.html' %}
+
 {% block content %}
   <h1>Sign Up</h1>
-  <div class="signup">
-    <form action="" class="site-form" action="index.html" method="post">
-      {{ form }}
-      <input type="submit" value="Signup">
-    </form>
-  </div>
+  <form  class="site-form" action="{% url 'accounts:signup' %}" method="post">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Signup">
+  </form>
 {% endblock %}
