--- a/djangonautic/templates/base_layout.html
+++ b/djangonautic/templates/base_layout.html
@@ -36,7 +36,7 @@
       </ul>
     </nav>
   </header>
-  <div class="wrapper"></div>
+  <div class="wrapper">
     {% block content %}
     {% endblock %}
   </div>
