--- a/djangonautic/templates/base_layout.html
+++ b/djangonautic/templates/base_layout.html
@@ -12,11 +12,11 @@
 </head>
 <body>
   <header>
-    <h1><a href="{% url 'home' %}"><img src="{% static 'logo.png' %}" alt="djangonautic"></a></h1>
+    <h1><a href="{% url 'home' %}"><img class="logo" src="{% static 'logo-2.png' %}" alt="djangonautic"></a></h1>
     <nav>
       <ul>
         {% if user.is_authenticated %}
-        <li>
+        <li class="signlog">
           <form class="logout-link" action="{% url 'accounts:logout' %}" method="post">
             {% csrf_token %}
             <button type="submit">Logout</button>
@@ -26,10 +26,10 @@
           <a href="{% url 'articles:create' %}" class="highlight">New Article</a>
         </li>
         {% else %}
-        <li>
+        <li class="signlog">
           <a href="{% url 'accounts:login' %}">Login</a>
         </li>
-        <li>
+        <li class="signlog">
           <a href="{% url 'accounts:signup' %}">Signup</a>
         </li>
         {% endif %}
