--- a/djangonautic/templates/base_layout.html
+++ b/djangonautic/templates/base_layout.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <h1><a href="{% url 'home' %}"><img class="logo" src="{% static 'logo-2.png' %}" alt="djangonautic"></a></h1>
+    <h1><a href="{% url 'home' %}"><img class="logo" src="{% static 'logo.png' %}" alt="djangonautic"></a></h1>
     <nav>
       <ul>
         {% if user.is_authenticated %}
