--- a/django_blog/templates/homepage.html
+++ b/django_blog/templates/homepage.html
@@ -1,5 +1,5 @@
 {% extends 'base_layout.html' %}
 {% block content %}
   <h1>This is the homepage</h1>
-  <p>Welome to Djangonautic</p>
+  <p>Welome to Django Blog</p>
 {% endblock %}
