--- a/django_blog/templates/base_layout.html
+++ b/django_blog/templates/base_layout.html
@@ -6,13 +6,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Djangonautic</title>
+  <title>Django Blog</title>
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
   <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
   <header>
-    <h1><a href="{% url 'home' %}"><img class="logo" src="{% static 'logo.png' %}" alt="djangonautic"></a></h1>
+    <h1><a href="{% url 'home' %}"><img class="logo" src="{% static 'logo.png' %}" alt="django_blog"></a></h1>
     <nav>
       <ul>
         {% if user.is_authenticated %}
