--- a/django_blog/articles/templates/articles/article_detail.html
+++ b/django_blog/articles/templates/articles/article_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base_layout.html' %}
 {% block content %}
-  <h1>Article List</h1>
+  <h1>Article Detail</h1>
   <div class="article-detail">
       <div class="article">
         <img src="{{ article.thumb.url }}" alt="">
